--- a/src/main/resources/fxml/TetrisView.fxml
+++ b/src/main/resources/fxml/TetrisView.fxml
@@ -60,6 +60,6 @@
         </VBox>
     </Group>
     <stylesheets>
-        <URL value="@window_style.css"/>
+        <URL value="@/css/Tetris.css"/>
     </stylesheets>
 </Pane>
