--- a/src/main/resources/css/MainCss.css
+++ b/src/main/resources/css/MainCss.css
@@ -6,7 +6,7 @@
 
 
 .root {
-	-fx-background-image: url("/img/arcade.png");
+	-fx-background-image: url("/img/arcade_background.png");
 	-fx-background-size: stretch;
 }
 
