--- a/src/main/resources/css/Tetris.css
+++ b/src/main/resources/css/Tetris.css
@@ -1,5 +1,5 @@
 .root {
-    -fx-background-image: url("/img/background_image.png");
+    -fx-background-image: url("/img/tetris_background_image.png");
 }
 
 .nextBrick {
