--- a/src/main/resources/fxml/MainView.fxml
+++ b/src/main/resources/fxml/MainView.fxml
@@ -5,31 +5,42 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="root" prefHeight="400.0" prefWidth="300.0" stylesheets="@../MainCSS/MainCss.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="root" prefHeight="400.0" prefWidth="300.0" stylesheets="@../css/MainCss.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <rowConstraints>
       <RowConstraints prefHeight="30.0" />
       <RowConstraints prefHeight="30.0" vgrow="ALWAYS" />
    </rowConstraints>
    <columnConstraints>
-      <ColumnConstraints hgrow="ALWAYS" prefWidth="100.0" />
-      <ColumnConstraints hgrow="ALWAYS" prefWidth="100.0" />
-      <ColumnConstraints hgrow="ALWAYS" prefWidth="100.0" />
+      <ColumnConstraints hgrow="ALWAYS" />
+      <ColumnConstraints hgrow="ALWAYS" />
+      <ColumnConstraints hgrow="ALWAYS" />
    </columnConstraints>
    <children>
       <Label fx:id="multiArcadeLabel" text="MULTI" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER">
          <font>
             <Font size="24.0" />
          </font></Label>
-      <VBox fx:id="buttonVbox" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <VBox fx:id="buttonVbox" alignment="CENTER" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <children>
-            <Button fx:id="jugarButton" defaultButton="true" mnemonicParsing="false" onAction="#onJugarAction" text="Jugar">
+            <HBox alignment="CENTER" spacing="5.0">
+               <children>
+                  <Button fx:id="tetrisButton" mnemonicParsing="false" onAction="#onTetrisAction" text="Tetris" />
+                  <Button fx:id="snakeButton" alignment="CENTER" mnemonicParsing="false" onAction="#onSnakeAction" text="Snake" />
+               </children>
                <VBox.margin>
-                  <Insets top="90.0" />
-               </VBox.margin></Button>
+                  <Insets top="100.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="CENTER" spacing="5.0">
+               <children>
+                  <Button fx:id="buscaminasButton" defaultButton="true" mnemonicParsing="false" onAction="#onBuscaminasAction" text="Buscaminas" />
+               </children>
+            </HBox>
             <Button fx:id="salirButton" mnemonicParsing="false" onAction="#onSalirAction" text="Salir">
                <VBox.margin>
                   <Insets top="10.0" />
