--- a/src/main/resources/fxml/SnakeView.fxml
+++ b/src/main/resources/fxml/SnakeView.fxml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="570.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="570.0" styleClass="root" stylesheets="@../css/Snake.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Canvas fx:id="mainCanvas" height="500.0" width="570.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <Label fx:id="gameOverLabel" layoutX="87.0" layoutY="180.0" styleClass="gameOverLabel" text="Game Over" visible="false" />
+      <Label fx:id="scoreLabel" layoutX="516.0" layoutY="221.0" styleClass="scoreLabel" text="0" />
    </children>
 </AnchorPane>
