--- a/src/main/resources/fxml/SnakeView.fxml
+++ b/src/main/resources/fxml/SnakeView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
@@ -9,5 +10,6 @@
       <Canvas fx:id="mainCanvas" height="500.0" width="570.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <Label fx:id="gameOverLabel" layoutX="87.0" layoutY="180.0" styleClass="gameOverLabel" text="Game Over" visible="false" />
       <Label fx:id="scoreLabel" layoutX="516.0" layoutY="221.0" styleClass="scoreLabel" text="0" />
+      <Button fx:id="exportScoreButton" layoutX="502.0" layoutY="298.0" mnemonicParsing="false" onAction="#onExportScoreButton" text="Export" />
    </children>
 </AnchorPane>
