--- a/src/main/resources/css/MainCss.css
+++ b/src/main/resources/css/MainCss.css
@@ -1,6 +1,6 @@
 
 .rootPlay {
-	-fx-background-color: radial-gradient(radius 100%, red, darkgray, black);
+	-fx-background-color: radial-gradient(radius 100.0%, red, darkgray, black);
 	-fx-background-size: stretch;
 }
 
@@ -11,21 +11,34 @@
 }
 
 Label{
-	-fx-text-fill:linear-gradient(from 0% 0% to 100% 100%, #52EDEB, pink);
+	-fx-text-fill:linear-gradient(from 0.0% 0.0% to 100.0% 100.0%, #52EDEB, pink);
 	-fx-font-family: "Playbill";
-	-fx-font-size: 90;
+	-fx-font-size: 90.0;
 }
 
-Button:focus{
-	-fx-border-color: blue;
-}
-
-Button:armed{
-    -fx-border-color: pink;
-}
 
 .labelJuego{
 	-fx-text-fill: #85F44D;
 	-fx-font-family: "papyrus";
-	-fx-font-size: 30;
+	-fx-font-size: 30.0;
+}
+
+
+Button{
+	-fx-display: inline-block;
+    -fx-outline: 0.0;
+    -fx-border: 0.0;
+    -fx-font-size: 10.0px;
+    -fx-font-weight: 300.0;
+    -fx-color: #fff;
+    -fx-cursor: pointer;
+    -fx-background-color: linear-gradient(to right,#e052a0,#f15c41);
+    -fx-border-radius: 2.0px;
+    -fx-padding: 11.0px 13.0px 10.0px;
+    -fx-white-space: nowrap;  
+}
+
+Button:hover {
+    -fx-background-color: #e6375a;
+    -fx-background-image: none!important;
 }
