--- a/src/main/resources/fxml/Mole.fxml
+++ b/src/main/resources/fxml/Mole.fxml
@@ -5,7 +5,8 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+
+<BorderPane xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <Button fx:id="moleButton" mnemonicParsing="false" onAction="#onMoleAction" BorderPane.alignment="CENTER">
          <graphic>
