--- a/src/main/resources/fxml/WhackAMole.fxml
+++ b/src/main/resources/fxml/WhackAMole.fxml
@@ -1,40 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import dad.multiarcade.whackAMole.model.Mole?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane fx:id="view" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
-   <top>
-      <HBox alignment="TOP_RIGHT" spacing="5.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label text="Puntuación:" />
-            <Label fx:id="puntosLabel" text="0" />
-         </children>
-         <padding>
-            <Insets bottom="5.0" left="5.0" right="40.0" top="5.0" />
-         </padding>
-      </HBox>
-   </top>
-   <right>
-      <GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </padding>
-      </GridPane>
-   </right>
+<BorderPane fx:id="view" xmlns="http://javafx.com/javafx/17"
+	xmlns:fx="http://javafx.com/fxml/1">
+	<top>
+		<HBox alignment="TOP_RIGHT" spacing="5.0"
+			BorderPane.alignment="CENTER">
+			<children>
+				<Label text="Puntuación:" />
+				<Label fx:id="puntosLabel" />
+			</children>
+			<padding>
+				<Insets bottom="5.0" left="5.0" right="40.0" top="5.0" />
+			</padding>
+		</HBox>
+	</top>
+	<center>
+		<GridPane fx:id="moleGridPane" alignment="CENTER"
+			maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+			minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
+			BorderPane.alignment="CENTER">
+			<columnConstraints>
+				<ColumnConstraints hgrow="SOMETIMES"
+					minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES"
+					minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES"
+					minWidth="10.0" prefWidth="100.0" />
+			</columnConstraints>
+			<rowConstraints>
+				<RowConstraints minHeight="10.0" prefHeight="30.0"
+					vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0"
+					vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0"
+					vgrow="SOMETIMES" />
+			</rowConstraints>
+			<padding>
+				<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+			</padding>
+			<children>
+			</children>
+		</GridPane>
+	</center>
+	<bottom>
+		<HBox alignment="CENTER_RIGHT" spacing="3.0"
+			BorderPane.alignment="CENTER">
+			<children>
+				<Button fx:id="empezarButton" mnemonicParsing="false"
+					onAction="#onEmpezarAction" text="Empezar">
+				</Button>
+			</children>
+			<padding>
+				<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+			</padding>
+		</HBox>
+
+	</bottom>
 </BorderPane>
